*SVN*

* Fixed regression with Base#reset_session that wouldn't use the the DEFAULT_SESSION_OPTIONS [adam@the-kramers.net]

* Fixed error rendering of rxml documents to not just swallow the exception and return 0 (still not guessing the right line, but hey)

* Fixed that textilize and markdown would instantiate their engines even on empty strings. This also fixes #333 [Ulysses]

* Added use of *_before_type_cast for all input and text fields. This is helpful for getting "100,000" back on a integer-based 
  validation where the value would normally be "100".

* Added Request#port_string to get something like ":8080" back on 8080 and "" on 80 (or 443 with https).

* Added Request#domain (returns string) and Request#subdomains (returns array).

* Added POST support for the breakpoint retries, so form processing that raises an exception can be retried with the original request [Florian Gross]


*1.0.1*

* Fixed a bug that would cause an ApplicationController to require itself three times and hence cause filters to be run three times [evl]


*1.0*

* Added that controllers will now attempt to require a model dependency with their name and in a singular attempt for their name.
  So both PostController and PostsController will automatically have the post.rb model required. If no model is found, no error is raised,
  as it is then expected that no match is available and the programmer will have included his own models.

* Fixed DateHelper#date_select so that you can pass include_blank as an option even if you don't use start_year and end_year #59 [what-a-day]

* Added that controllers will now search for a layout in $template_root/layouts/$controller_name.r(html|xml), so PostsController will look
  for layouts/posts.rhtml or layouts/posts.rxml and automatically configure this layout if found #307 [Marcel]

* Added FormHelper#radio_button to work with radio buttons like its already possible with check boxes [Michael Koziarski]
